[gd_scene load_steps=148 format=2]

[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Spin Attack/Battlemage Spin Attack.png" type="Texture" id=1]
[ext_resource path="res://Script/PlayerController2.gd" type="Script" id=2]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Fast Magic/Battlemage Fast magic.png" type="Texture" id=3]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Hurt 1 n 2/Hurt 1.png" type="Texture" id=4]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Death/Battlemage Death.png" type="Texture" id=5]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Jump Foward/Battlemage Jump Foward.png" type="Texture" id=6]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Sustain Magic/Battlemage Sustain Magic.png" type="Texture" id=7]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Idle/Battlemage Idle.png" type="Texture" id=8]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Hurt 1 n 2/Hurt 2.png" type="Texture" id=9]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Running/Battlemage Run.png" type="Texture" id=10]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Jump Attack/Jump Foward Attack.png" type="Texture" id=11]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Crouch Attack/Crouch Attack.png" type="Texture" id=12]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Stop/Battlemage Stop.png" type="Texture" id=13]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Dash/Battlemage Dash.png" type="Texture" id=14]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Attack 2/Battlemage Attack 2.png" type="Texture" id=15]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Attack 3/Battlemage Attack 3.png" type="Texture" id=16]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Attack 1/Battlemage Attack 1.png" type="Texture" id=17]
[ext_resource path="res://Texture/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Crouch/Battlemage Crouch.png" type="Texture" id=18]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 432, 56, 48 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 480, 56, 48 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 528, 56, 48 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 432, 56, 48 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 432, 56, 48 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 432, 56, 48 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 480, 56, 48 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 56, 48 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 56, 48 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 56, 48 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 56, 48 )

[sub_resource type="AtlasTexture" id=131]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 432, 56, 48 )

[sub_resource type="AtlasTexture" id=132]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 56, 48 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 48, 56, 48 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 56, 48 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 144, 56, 48 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 56, 48 )

[sub_resource type="SpriteFrames" id=137]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "stop",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "death",
"speed": 12.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "skill",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "hurt2",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": true,
"name": "hurt1",
"speed": 1.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "jumpAttack",
"speed": 8.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "attack3",
"speed": 18.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "running",
"speed": 20.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": false,
"name": "attack1",
"speed": 16.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": false,
"name": "attack2",
"speed": 16.0
}, {
"frames": [ SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "skill2",
"speed": 11.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ) ],
"loop": true,
"name": "crouchAttack",
"speed": 7.0
}, {
"frames": [ SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ) ],
"loop": true,
"name": "crouch",
"speed": 9.0
}, {
"frames": [ SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ) ],
"loop": true,
"name": "dash",
"speed": 7.0
}, {
"frames": [ SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ) ],
"loop": true,
"name": "spinAttack",
"speed": 13.0
}, {
"frames": [ SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ) ],
"loop": false,
"name": "jump",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.189, 63.5587 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 17.6941, 50.8094 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 89
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.33966, -35.2271 )
scale = Vector2( 5.09438, 5.09438 )
frames = SubResource( 137 )
animation = "jumpAttack"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.98685, 5.34539 )
scale = Vector2( 1, 1.3 )
shape = SubResource( 1 )

[node name="swordHit" type="Area2D" parent="."]
position = Vector2( 0, 0.71 )
scale = Vector2( 0.845, 0.903994 )
collision_layer = 32
collision_mask = 88

[node name="melee" type="CollisionShape2D" parent="swordHit"]
position = Vector2( 75, -23.306 )
shape = SubResource( 10 )
disabled = true

[node name="TimerMelee" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="TimerKnock" type="Timer" parent="."]
one_shot = true

[node name="TimerInvisible" type="Timer" parent="."]
one_shot = true

[node name="TimerSkill" type="Timer" parent="."]

[connection signal="body_entered" from="swordHit" to="." method="_on_swordHit_body_entered"]
[connection signal="timeout" from="TimerMelee" to="." method="_on_TimerMelee_timeout"]
[connection signal="timeout" from="TimerKnock" to="." method="_on_TimerKnock_timeout"]
[connection signal="timeout" from="TimerInvisible" to="." method="_on_TimerInvisible_timeout"]
[connection signal="timeout" from="TimerSkill" to="." method="_on_TimerSkill_timeout"]
